[project]
name = "staleness-pipeline"
version = "0.1.0"
description = "Detects stuck/stale sensor readings and reconstructs plausible values with Chronos Bolt Small."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "torch>=2.0",
    "chronos-forecasting",
    "typer>=0.12",
    "mlflow>=2.10",
    "gql[requests]>=3.5",
    "kafka-python-ng>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

# This is what makes automation trivial: once `pip install -e .` has run,
# any shell (yours, cron, eventually CI) can just call `staleness offline`
# instead of `python /some/path/script.py`.
[project.scripts]
staleness = "staleness_pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Tells setuptools where the actual package code lives — inside src/,
# not the repo root. This is what makes `pip install -e .` work.
[tool.setuptools.packages.find]
where = ["src"]

# dashboard.py serves dashboard_static/index.html at runtime — without
# this, a non-editable install (a real `pip install .` / wheel build,
# rather than `pip install -e .`) would silently drop the HTML file since
# setuptools only bundles .py files by default.
[tool.setuptools.package-data]
staleness_pipeline = ["dashboard_static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that hit the real Chronos model — skip with -k \"not real_chronos\" or -m \"not slow\"",
]